# productivity-timer

./: .gitignore  Cargo.toml  README.md  readme.md
src/: analytics.rs  daemon.rs  database.rs  interface.rs  main.rs  oauth.rs  pt_duration.rs  session.rs
